src/objects/GDP_Area_Country__c.object
<CustomObject>
    <description>Junction Object Between IATA ISO Country and GDP Area Definintion</description>
    <fields>
        <fullName>GDP_Area_Definition__c</fullName>
        <label>GDP Area Definition</label>
        <referenceTo>GDP_Area_Definition__c</referenceTo>
        <relationshipLabel>GDP Area Countries</relationshipLabel>
        <relationshipName>GDP_Area_Countries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IATA_ISO_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IATA ISO Country</label>
        <referenceTo>IATA_ISO_Country__c</referenceTo>
        <relationshipLabel>GDP Area Countries</relationshipLabel>
        <relationshipName>GDP_Area_Countries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>GDP Area Country</label>
    <nameField>
        <displayFormat>AC-{00000}</displayFormat>
        <label>GDP Area Country Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GDP Area Countries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>